<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1" android:checkableBehavior="all">
        <item
            android:visible="false"
            android:id="@+id/account"
            android:icon="@drawable/account"
            android:title="@string/account" />

        <item
            android:id="@+id/inbox"
            android:icon="@drawable/inbox"
            android:title="@string/inbox" />

        <item
            android:id="@+id/login"
            android:icon="@drawable/lock_black"
            android:title="@string/login" />

    </group>

    <group android:id="@+id/group2" android:checkableBehavior="all">

        <item
            android:visible="false"
            android:id="@+id/settingPassword"
            android:icon="@drawable/lock_black"
            android:title="@string/settingPassword" />

        <item
            android:visible="false"
            android:id="@+id/logout"
            android:icon="@drawable/exit"
            android:title="@string/logout" />

    </group>

    <group android:id="@+id/group3" android:checkableBehavior="all">
        <item
            android:id="@+id/about"
            android:icon="@drawable/information"
            android:title="@string/about" />
<!--
        <item
            android:id="@+id/language_in"
            android:icon="@drawable/language"
            android:title="@string/lang_id"
            android:visible="false" />

        <item
            android:id="@+id/language_en"
            android:icon="@drawable/language"
            android:title="@string/lang_en"
            android:visible="false" />
-->
    </group>

    <group android:id="@+id/group4" android:checkableBehavior="all">
        <!--
        <item
            android:id="@+id/privacy_policy"
            android:icon="@drawable/verified_black"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/term_of_service"
            android:icon="@drawable/term_of_service"
            android:title="@string/term_of_service" />
            -->
    </group>

</menu>
