<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/list_item_pilih_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="2.5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">

            <TextView
                android:id="@+id/nomor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomor"
                android:textColor="@color/colorLine"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nopol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_toEndOf="@+id/nomor"
                android:text="@string/police"
                android:textColor="@color/colorLine"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nopol"
                android:text="@string/model"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/chasis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/type"
                android:layout_alignParentEnd="true"
                android:text="@string/chasis"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/type"
                android:text="@string/colour"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/engine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/color"
                android:layout_alignParentEnd="true"
                android:text="@string/engine"
                android:textSize="14sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
