<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/list_item_booking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="2.5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dip"
                android:src="@mipmap/booking_date_sukses"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/nomor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/icon"
                android:text="@string/nomor"
                android:textColor="@color/colorLine"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/namaDealer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_toEndOf="@+id/nomor"
                android:text="@string/dealer"
                android:textColor="@color/colorLine"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/namaDealer"
                android:layout_toEndOf="@id/icon"
                android:text="@string/date"
                android:textColor="@color/darkGrey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/namaDealer"
                android:layout_toEndOf="@+id/date"
                android:text="@string/time"
                android:textAlignment="textEnd"
                android:textColor="@color/darkGrey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/remarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:layout_toEndOf="@id/icon"
                android:text="@string/remarks"
                android:textColor="@color/darkGrey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/remarks"
                android:layout_toEndOf="@id/icon"
                android:text="@string/note"
                android:textColor="@color/darkGrey"
                android:textSize="14sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
