<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonSaveNewPassword"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/fullname" />

            <TextView
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/editTextBackground"
                android:text="@string/harus_diisi"
                android:textColor="@color/colorLine"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/usercode" />

            <TextView
                android:id="@+id/usercode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/editTextBackground"
                android:textColor="@color/colorLine"
                android:text="@string/harus_diisi"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/passwordLama" />

            <RelativeLayout
                android:id="@+id/RelativeLayoutPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/passwordLama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLine"
                    android:hint="@string/harus_diisi"
                    android:inputType="textPassword" />

                <Switch
                    android:id="@+id/showHidePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/passwordLama"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/passwordBaru" />

                <EditText
                    android:id="@+id/passwordBaru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLine"
                    android:hint="@string/harus_diisi"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/passwordBaru2" />

                <EditText
                    android:id="@+id/passwordBaru2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLine"
                    android:hint="@string/harus_diisi"
                    android:inputType="textPassword" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/buttonSaveNewPassword"
        style="@style/btnStyleBrown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:drawableEnd="@android:drawable/ic_menu_save"
        android:onClick="onClick"
        android:text="@string/saveNewPassword" />

</RelativeLayout>
