<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_form_booking_sukses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bg_brown"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".FormBookingSukses">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/booking_result_sukses" />

    <TextView
        android:id="@+id/text_sukses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:fontFamily="serif"
        android:paddingBottom="10dp"
        android:paddingTop="30dp"
        android:text="@string/sukses_booking"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/kode_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_sukses"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:padding="10dp"
        android:text="@string/kode_booking"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonOk"
        android:layout_below="@+id/kode_order"
        android:fontFamily="serif"
        android:gravity="center_vertical"
        android:text="@string/sukses_deskripsi_booking"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/buttonOk"
        style="@style/btnStyleBrown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="btn_ok"
        android:text="@string/ok" />

</RelativeLayout>
