<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
    android:orientation="vertical"
    tools:context=".Emergency">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/rsa" />

            <TextView
                android:id="@+id/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/deskripsi_emergency"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harus_diisi"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button_call"
                style="@style/btnStyleBrown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/ic_menu_call"
                android:onClick="btn_call_hyundai"
                android:text="@string/call_emergency"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/button_pick_up"
                style="@style/btnStyleBrown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/ic_menu_myplaces"
                android:onClick="btn_pick_up"
                android:text="@string/send_map_emergency"
                android:textAllCaps="true" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
